# StabilityNet-Mobility-Behavior-Analysis

./: .gitignore  CLAUDE.md  MANUAL_ACTIONS.md  MEMORY.md  README.md
backend/: .env.example  README.md  main.py  pyproject.toml  smoke_test.py  test_video_upload.py
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/api/: __init__.py  analysis_service.py  routes.py  schemas.py
backend/app/behavior/: __init__.py  events.py  features.py  scoring.py  track_state.py
backend/app/pipeline/: __init__.py  annotated_video.py  frame_reader.py  result_writer.py  video_pipeline.py
backend/app/schemas/: __init__.py  behavior.py  detection.py  tracking.py
backend/app/utils/: geometry.py
backend/app/vision/: __init__.py  detector.py  sort_tracker.py  tracker.py  yolo_detector.py
backend/samples/: README.md
backend/tests/: test_annotated_video.py  test_api.py  test_cli.py  test_features.py  test_pipeline_policy.py  test_scoring.py  test_tracker.py  test_yolo_detector.py
docs/: AGENT_INSTRUCTIONS.md  AGENT_STATE.md  ARCHITECTURE.md  DECISIONS.md  EVALUATION.md  LESSONS.md  PROJECT_OVERVIEW.md  ROADMAP.md
frontend/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/public/samples/: README.md
frontend/public/samples/thumbnails/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/stabilitynet/analyses/: route.ts
frontend/src/lib/: backendProxy.ts  sampleVideos.ts  stabilityNetApi.ts
scripts/: generate_sample_thumbnails.sh
(+5 files in other folders)
