[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stabilitynet-backend"
version = "0.1.0"
description = "Offline video mobility behavior analysis backend for StabilityNet."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "numpy>=1.26",
  "opencv-python>=4.9",
  "ultralytics>=8.2",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
stabilitynet = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
